--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap-icons": "^1.11.3",
     "glightbox": "^3.3.0",
     "swiper": "^11.1.14",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
