--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap-icons": "^1.11.3",
     "flag-icons": "^7.2.3",
     "glightbox": "^3.3.0",
+    "imagesloaded": "^5.0.0",
+    "isotope-layout": "^3.0.6",
     "swiper": "^11.1.14",
     "vue": "^3.5.12",
     "vuex": "^4.1.0"
